added splash screen

--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -19,10 +19,10 @@ navbar
       md-input-container
         label
         textarea(name='feedbackName' ng-model='feedback' required='true' autocomplete='off',
-        ng-focus='isFeedbackFocused = true', ng-blur='isFeedbackFocused = false'
+        ng-focus='feedbackForm.isFeedbackFocused = true', ng-blur='feedbackForm.isFeedbackFocused = false'
         placeholder='Feedback')
 
-        div(ng-if='(feedbackForm.$submitted || feedbackForm.feedbackName.$touched) && ! isFeedbackFocused'
+        div(ng-if='(feedbackForm.$submitted || feedbackForm.feedbackName.$touched) && ! feedbackForm.isFeedbackFocused'
         ng-messages="feedbackForm.feedbackName.$error" md-auto-hide="true")
           div(ng-message='required') You need to enter some feedback
           div(ng-message='feedback') Looks like something went wrong trying to submit your feedback. Try again.
