--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -90,6 +90,11 @@ form {
 
 
 #main-ui-view {
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  &.fade-in {
+    opacity: 1;
+  }
   position: absolute;
   width: 100%;
   min-height: 100%;
