removed fade in from index

--- a/client/app/styles/colors.less
+++ b/client/app/styles/colors.less
@@ -12,6 +12,7 @@
 @button-grey: @grey;
 @title-grey: @dark-grey;
 
+@deep-dark-ultimate: #0f272f;
 @dark-blue: #1a414f;
 @deep-blue: #005e9c;
 @blue: #0079c8;
