--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -11,7 +11,7 @@ navbar
 
     .title.small-title
       .title-container
-        h1 What do you want to let us know?
+        h1 What do you want to tell us?
 
     form(name='feedbackForm', autocomplete='off' ng-submit='submitFeedback(feedbackForm, feedback, contact, name)' novalidate)
 
