--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -22,7 +22,8 @@ navbar
         ng-focus='emailRegisterForm.isEmailFocused = true', ng-blur='emailRegisterForm.isEmailFocused = false',
         placeholder='Enter your acc email')
 
-        div(ng-if='(emailRegisterForm.$submitted || emailRegisterForm.email.$touched) && ! emailRegisterForm.isEmailFocused'
+        //div(ng-if='(emailRegisterForm.$submitted || emailRegisterForm.email.$touched) && ! emailRegisterForm.isEmailFocused'
+        div(ng-if='(emailRegisterForm.$submitted) && ! emailRegisterForm.isEmailFocused'
         ng-messages="emailRegisterForm.email.$error" md-auto-hide="true")
           div(ng-message='email') That email doesn't look quite right
           div(ng-message='required') We need your email address
@@ -61,7 +62,8 @@ navbar
           ng-focus='tokenRegisterForm.isRegisterTokenFocused = true', ng-blur='tokenRegisterForm.isRegisterTokenFocused = false',
           placeholder='Enter the 5 digit code')
 
-        div(ng-if='(tokenRegisterForm.$submitted || tokenRegisterForm.registerToken.$touched) && ! tokenRegisterForm.isRegisterTokenFocused'
+        //div(ng-if='(tokenRegisterForm.$submitted || tokenRegisterForm.registerToken.$touched) && ! tokenRegisterForm.isRegisterTokenFocused'
+        div(ng-if='(tokenRegisterForm.$submitted) && ! tokenRegisterForm.isRegisterTokenFocused'
         ng-messages="tokenRegisterForm.registerToken.$error" md-auto-hide="true")
           div(ng-message='required') You need to enter the code we sent you.
           div(ng-message='minlength') You haven't quite entered 5 digits
