changed navbar color

--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -46,7 +46,7 @@ navbar {
     height: 20px;
     line-height: 20px;
     font-size: 20px;
-    color: @green-yellow;
+    color: @light-grey;
     font-weight: 700;
   }
 }
