--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -90,10 +90,9 @@ form {
 
 
 #main-ui-view {
-  position: absolute;
   width: 100%;
   min-height: 100%;
-  &.ng-enter         { animation: scaleUp 0.5s both ease-in; }
+  &.ng-enter         { animation: fadeIn 0.5s both ease-in; }
   &.ng-leave         { display: none; }
 }
 
