--- a/client/app/styles/toast.less
+++ b/client/app/styles/toast.less
@@ -1,5 +1,10 @@
 
 
+md-toast {
+  padding: 0;
+}
 md-toast.md-default-theme .md-toast-content, md-toast .md-toast-content {
-  background-color: @deep-blue;
+  background-color: @dark-blue;
+  border-radius: 0;
+  box-shadow: none;
 }
