--- a/client/app/styles/animations.less
+++ b/client/app/styles/animations.less
@@ -8,3 +8,9 @@
   from    { opacity: 0; -webkit-transform: scale(0.95); }
 }
 
+
+@keyframes fadeIn {
+  from    { opacity: 0; }
+  to      { opacity: 1; }
+}
+
