--- a/client/app/app.less
+++ b/client/app/app.less
@@ -6,30 +6,31 @@ html, body {
   width: 100%;
   overflow-x: hidden;
   height: 100%;
-
-  background-color: @light-grey;
 }
 
+
 body {
-  &.main,
-  &.admin {
-    background-color: #fff;
+  opacity: 0;
+  &.fade-in {
+    opacity: 1;
   }
-}
 
-md-content {
-  background-color: inherit;
-}
-
-body {
-    opacity: 0;
-    transition: opacity 0.4s ease;
-    &.fade-in {
-      opacity: 1;
-    }
   position: relative !important;
   width: 100% !important;
   top: 0 !important;
+
+  background: @light-grey !important;
+
+  &.main,
+  &.admin {
+    background: #fff !important;
+  }
+
+  transition: opacity 0.5s ease-in;
+}
+
+md-content {
+  background-color: transparent;
 }
 
 /* inject:less */
