--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -10,8 +10,6 @@
 form {
   padding: 20px;
   margin: 0;
-  background-color: #fff;
-
   input, button {
     margin: 6px 0;
     width: 100%;
@@ -91,26 +89,25 @@ form {
 
 #main-ui-view {
   width: 100%;
-  min-height: 100%;
-  &.ng-enter         { animation: fadeIn 0.5s both ease-in; }
+  &.ng-enter { animation: fadeIn 0.5s both ease-in; }
   &.ng-leave         { display: none; }
 }
 
 
 
+.container.ng-leave {
+  display: none;
+}
 
 .container.ng-enter,
-//.container.ng-leave
 {
   transition: opacity cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 
-.container.ng-enter,
-.container.ng-leave.ng-leave-active {
+.container.ng-enter {
   opacity: 0;
 }
 
-.container.ng-leave,
 .container.ng-enter.ng-enter-active {
   opacity: 1;
 }
