--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -55,10 +55,16 @@ form {
     }
   }
 
+  &.dark-grey-title {
+    h1 {
+      color: @dark-grey;
+    }
+  }
+
   &.login-title,
   &.small-title {
     h1 {
-      font-size: 1.3em;
+      font-size: 1.2em;
     }
   }
 
@@ -70,7 +76,7 @@ form {
 
   &.small-margin {
     h1 {
-      margin: 10px 20px 0;
+      margin: 9px 20px 0;
     }
   }
 
