--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -3,7 +3,7 @@
 .container(ng-if='! successful')
   .inner-container
 
-    .title.small-title
+    .title.small-title.grey-title
       .title-container
         h1 What do you want to tell us?
 
@@ -41,11 +41,11 @@
 .container(ng-if='successful')
   .inner-container
 
-    .title.small-title
+    .title.small-title.grey-title
       .title-container
         h1 Thank you!
 
-    .title.small-title.small-margin
+    .title.small-title.small-margin.grey-title
       .title-container
         h1 {{feedbackSuccessTitle}}
 
