--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -25,7 +25,7 @@
               | Admin
           md-menu-item(ng-if='showMain()')
             md-button.menu-button(ng-click='main()')
-              settings-svg
+              home-svg
               | Home
           md-menu-item
             md-button.menu-button(ng-click='logout()')
