improved ng messages cut off

--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -23,6 +23,10 @@ md-input-container {
   }
 
 
+  [ng-messages] {
+    padding-top: 2px;
+  }
+
 
   input,
   input.md-input {
@@ -30,6 +34,8 @@ md-input-container {
 
     padding-left: 0;
     padding-right: 0;
+
+    margin-bottom: 2px;
 
     background-color: transparent;
 
