--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -3,6 +3,12 @@
   width: 100%;
   height: 80px;
   background-color: @light-grey;
+
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+  &.fade-in {
+    opacity: 1;
+  }
 }
 
 .navbar-container-inner {
@@ -18,6 +24,7 @@
 }
 
 
+.navbar,
 navbar {
   min-height: 80px;
   display: block;
