fixed up error transitions

--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -23,8 +23,11 @@ md-input-container {
   }
 
 
-  [ng-messages] {
-    padding-top: 2px;
+  [ng-messages],
+  [ng-message] {
+    padding-top: 2px !important;
+//    margin-top: 0 !important;
+//    transition: margin-top 0.3s ease, opacity 0.3s ease !important;
   }
 
 
