block route back when authed

--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -41,7 +41,8 @@
 .container(ng-if='successful')
   .inner-container
 
-    .title.small-title.grey-title
+    //.title.small-title.grey-title
+    .title
       .title-container
         h1 Thank you!
 
