--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -33,7 +33,7 @@ navbar {
     position: absolute;
     right: 0;
     top: 0;
-
+    opacity: 0.5;
   }
 
   .beta {
@@ -45,5 +45,6 @@ navbar {
     font-size: 20px;
     color: @light-grey;
     font-weight: 700;
+    opacity: 0.5;
   }
 }
