--- a/client/app/app.less
+++ b/client/app/app.less
@@ -11,17 +11,17 @@ html, body {
 
 body {
 
-
-
   position: relative !important;
   width: 100% !important;
   top: 0 !important;
 
   background: @light-grey !important;
+//  background: red !important;
 
   &.main,
   &.admin {
     background: #fff !important;
+//    background: blue !important;
   }
 
   .body-container {
@@ -37,6 +37,7 @@ body {
 //  transition: opacity 0.5s ease-in, background 0.5s ease-in;
 //  transition: all 0.5s ease-in;
 }
+
 
 md-content {
   background-color: transparent;
