--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -34,7 +34,7 @@
 
   .inner-container
 
-    .title.login-title.tiny-title
+    .title.grey-title.tiny-title
       .title-container.login-title-container
         h1 We have sent you an email.
           br
