--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -33,9 +33,14 @@ bbq-login {
     font-weight: bold;
   }
 
+  .login-title {
+    margin-top: 20px;
+  }
+
   .email-title {
     word-break: break-all;
     opacity: 0.78;
+    margin: 20px 0 10px;
     .md-button {
       svg {
         color: @dark-grey;
