--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -4,7 +4,7 @@
 .navbar-container-outer(ng-class='{"fade-in": fadeIn}')
   .navbar-container-inner
 
-    .beta DEMO
+    //.beta DEMO
 
     .logo-container
       include ../../assets/svg/logo.svg
