--- a/client/app/app.less
+++ b/client/app/app.less
@@ -54,6 +54,7 @@ md-content {
 @import 'styles/toast.less';
 @import '../components/bbq-admin/bbq-admin.less';
 @import '../components/bbq-feedback/bbq-feedback.less';
+@import '../components/bbq-info/bbq-info.less';
 @import '../components/bbq-login/bbq-login.less';
 @import '../components/navbar/navbar.less';
 /* endinject */
