added beginning of modal component

--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -3,12 +3,14 @@
 .container
   .inner-container
 
-    .title
+    .title.small-title.grey-title
       .title-container
-        h1 INFO (Work in progress)
+        h1 (Work in progress)
 
     form
 
-      md-button How to add Fixit to your homescreen
+      md-button What feedback should I send?
 
-      md-button How to use text to speech
+      md-button How do I add Fixit to my homescreen?
+
+      md-button How do I use speech to text?
