added confirm logout modal

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -50,6 +50,7 @@ md-content {
 @import 'styles/inputs.less';
 @import 'styles/layout.less';
 @import 'styles/menu.less';
+@import 'styles/modal.less';
 @import 'styles/progress.less';
 @import 'styles/toast.less';
 @import '../components/bbq-admin/bbq-admin.less';
