--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -9,7 +9,7 @@
 
     form
 
-      md-button What feedback should I send?
+      md-button What kind of feedback should I send?
 
       md-button How do I add Fixit to my homescreen?
 
