support ios keypad for code entry

--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -53,7 +53,7 @@
       md-input-container
         label
         input.token-input(name='registerToken' ng-model='registerToken', required='true', type='number', autocomplete='off'
-          ng-minlength='5' ng-maxlength='5' maxlength='5',
+          ng-minlength='5' ng-maxlength='5' maxlength='5', pattern='[0-9]*' inputmode='numeric'
           ng-focus='tokenRegisterForm.isRegisterTokenFocused = true', ng-blur='tokenRegisterForm.isRegisterTokenFocused = false',
           placeholder='Enter the 5 digit code')
 
