--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -6,7 +6,7 @@
 
     .title.login-title
       .title-container.login-title-container
-        h1 Feedback Login
+        h1 Login
 
 
     form(name='emailRegisterForm' ng-submit='submitEmail(emailRegisterForm, email)' novalidate='' autocomplete='off')
@@ -15,7 +15,7 @@
         label
         input(name='email' ng-model='email', required type='email', autocomplete='off', ng-pattern="/^.+@.+\..+$/",
         ng-focus='emailRegisterForm.isEmailFocused = true', ng-blur='emailRegisterForm.isEmailFocused = false',
-        placeholder='Enter your acc email')
+        placeholder='Enter your solnet email')
 
         div(ng-show='(emailRegisterForm.$submitted) && ! emailRegisterForm.isEmailFocused'
         ng-messages="emailRegisterForm.email.$error")
