--- a/client/app/styles/colors.less
+++ b/client/app/styles/colors.less
@@ -14,7 +14,7 @@
 
 @deep-dark-ultimate: #0f272f;
 @dark-blue: #1a414f;
-@deep-blue: #005e9c;
+@deep-blue: #0458A1;
 @blue: #0079c8;
 @light-blue: #a6c7dc;
 
