added round logo

--- a/client/app/styles/colors.less
+++ b/client/app/styles/colors.less
@@ -12,8 +12,8 @@
 @button-grey: @grey;
 @title-grey: @dark-grey;
 
-@deep-dark-ultimate: #0f272f;
-@dark-blue: #1a414f;
+@deep-dark-ultimate: #1A2025;
+@dark-blue: #384652;
 @deep-blue: #0458A1;
 @blue: #0079c8;
 @light-blue: #a6c7dc;
