--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -7,7 +7,8 @@
     //.beta DEMO
 
     .logo-container
-      include ../../assets/svg/logo.svg
+      //include ../../assets/svg/logo.svg
+      include ../../assets/svg/logo-round.svg
 
 
     .menu
