--- a/client/components/bbq-info/bbq-info.jade
+++ b/client/components/bbq-info/bbq-info.jade
@@ -9,8 +9,8 @@
 
     form
 
-      md-button What kind of feedback should I send?
+      md-button What kind of leads should I send?
 
-      md-button How do I add Fixit to my homescreen?
+      md-button How do I add Leads to my homescreen?
 
       md-button How do I use speech to text?
