--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -5,32 +5,32 @@
 
     .title.small-title.grey-title
       .title-container
-        h1 What do you want to tell us?
+        h1 What lead would you like to tell us about?
 
     form(name='feedbackForm', autocomplete='off' ng-submit='submitFeedback(feedbackForm, feedback, contact, name)' novalidate)
 
+
       md-input-container.bold
         label
-        textarea(name='feedbackName' ng-model='feedback' required='true' autocomplete='off',
+        input(name='feedbackName' ng-model='name' required='true' autocomplete='off', placeholder='Client name'
+        ng-focus='feedbackForm.isNameFocused = true', ng-blur='feedbackForm.isNameFocused = false')
+        div(ng-if='(feedbackForm.$submitted) && ! feedbackForm.isNameFocused'
+        ng-messages="feedbackForm.feedbackName.$error" md-auto-hide="true")
+          div(ng-message='required') You need to enter a client name
+
+
+      md-input-container.bold
+        label
+        textarea(name='feedbackDetails' ng-model='feedback' required='true' autocomplete='off',
         ng-focus='feedbackForm.isFeedbackFocused = true', ng-blur='feedbackForm.isFeedbackFocused = false'
-        placeholder='Enter feedback here')
+        placeholder='Enter details about lead here')
 
         div(ng-if='(feedbackForm.$submitted) && ! feedbackForm.isFeedbackFocused'
-        ng-messages="feedbackForm.feedbackName.$error" md-auto-hide="true")
-          div(ng-message='required') You need to enter some feedback
-          div(ng-message='feedback') Looks like something went wrong trying to submit your feedback. Try again.
+        ng-messages="feedbackForm.feedbackDetails.$error" md-auto-hide="true")
+          div(ng-message='required') You need to enter some details
+          div(ng-message='feedback') Looks like something went wrong trying to submit your lead. Try again.
 
 
-      md-input-container.optional
-        label
-        input(name='name' ng-model='name' autocomplete='off',
-        placeholder='{{namePlaceholder}}', ng-init='namePlaceholder = "Add details (Optional)"' ng-click='showDetails = namePlaceholder = "Name"')
-
-
-      md-input-container.optional(ng-if='showDetails')
-        label
-        input(name='contact' ng-model='contact' autocomplete='off',
-        placeholder='Contact')
 
 
       md-button(type='submit', ng-class='{"bold-button": feedbackForm.$valid}')
@@ -43,7 +43,6 @@
 .container(ng-if='successful')
   .inner-container
 
-    //.title.small-title.grey-title
     .title
       .title-container
         h1 Thank you!
@@ -55,4 +54,4 @@
 
 
     form(novalidate)
-      md-button.bold-button(ng-click='resetFeedback()', type='button') New feedback
+      md-button.bold-button(ng-click='resetFeedback()', type='button') New lead
