fixed up leads form

--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -12,10 +12,7 @@ button.md-button:not(.md-icon-button):not(.menu-button) {
   font-size: 1em;
   height: 54px;
 
-
   background-color: transparent;
-
-
 
   span {
     text-transform: none;
@@ -65,6 +62,12 @@ button.md-button:not(.md-icon-button):not(.menu-button) {
 
 }
 
+
+button.md-button.grey-button {
+  svg {
+    fill: @medium-grey;
+  }
+}
 
 
 md-toast button.md-button,
