--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -73,7 +73,7 @@ md-input-container {
       }
     }
 
-    margin: 8px 0;
+    //margin: 8px 0;
 
     @placeholder-color: @grey;
     input:placeholder { color: @placeholder-color; }
