--- a/client/app/app.less
+++ b/client/app/app.less
@@ -5,7 +5,6 @@ html, body {
   padding: 0;
   width: 100%;
   overflow-x: hidden;
-  height: 100%;
 }
 
 
@@ -46,6 +45,7 @@ md-content {
 /* inject:less */
 @import 'styles/animations.less';
 @import 'styles/buttons.less';
+@import 'styles/checkbox.less';
 @import 'styles/colors.less';
 @import 'styles/inputs.less';
 @import 'styles/layout.less';
