--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -8,7 +8,7 @@ button.md-button:not(.md-icon-button):not(.menu-button) {
 
 button.md-button:not(.md-icon-button):not(.menu-button) {
 
-  border-radius: 0;
+  border-radius: 8px;
   font-size: 1em;
   height: 54px;
 
@@ -42,7 +42,6 @@ button.md-button:not(.md-icon-button):not(.menu-button) {
       background-color: @blue;
     }
   }
-
 
   right-arrow-svg {
     height: 20px;
