--- a/client/app/styles/menu.less
+++ b/client/app/styles/menu.less
@@ -31,6 +31,13 @@ md-menu-item > .md-button {
   align-items: center;
   color: #fff;
   height: 64px;
+
+  border-radius: 8px !important;
+  .md-ripple,
+  .md-ripple-container {
+    border-radius: 8px !important;
+  }
+
   svg {
     margin-right: 10px;
     fill: #fff;
