fixed up checkbox lineheight

--- a/client/app/styles/checkbox.less
+++ b/client/app/styles/checkbox.less
@@ -13,6 +13,7 @@ md-checkbox .md-ripple-container .md-ripple {
 }
 
 md-checkbox {
+  line-height: 27px;
   .md-icon {
     border-radius: 50%;
   }
